fixed scrollbars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,7 @@ a:-webkit-any-link {
 
 }
 
-::-webkit-scrollbar {
+#leftnav::-webkit-scrollbar {
   display: none;
   }
+
